Add people and contributors

--- a/index.html
+++ b/index.html
@@ -114,6 +114,33 @@
 				<div class="sixteen columns">
 					<h1>The People</h1>
 				</div>
+
+				<div class="eight columns">
+					<h3>Rachel</h3>
+					<p>Aspires to be captain kirk / a pony.</p>
+
+					<img src="http://placehold.it/200x200">
+
+				</div>
+
+				<div class="eight columns">
+					<h3>And</h3>
+					<p>Aspires to be captain kirk / a pony.</p>
+
+					<img src="http://placehold.it/200x200">
+				</div>
+			</div>
+		</div>
+
+		<hr>
+
+		<div class="super-container full-width">
+			<div class="container">
+
+				<div class="sixteen columns">
+					<h1>Contributors on Github</h1>
+					<img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64">
+				</div>
 			</div>
 		</div>
 
