Add hack events

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 				<div class="sixteen columns">
 					<h1>Contributors on Github</h1>
 					<img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64">
+
+					<p>Do you want to make a contribution? Come along to our <a href="#">next hack event</a>.
 				</div>
 			</div>
 		</div>
@@ -155,7 +157,7 @@
 					<p>We are looking for funding to work on this project full-time. Allowing us to bring the best information to you as soon as possible.</p>
 
 					<p>Gittip</p>
-					<p>Vost for us on CitySpark!</p>
+					<p>Vote for us on CitySpark!</p>
 
 				</div>
 			</div>
