Change copy and project name

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>NHS Rainbow</title>
+	<title>crowdhealth.io</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -45,7 +45,9 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<h1 class="remove-bottom" style="margin-top: 40px">Health information for LGBTQ* people</h1>
+
+			<h1 style="margin-top: 40px">crowdhealth.io</h1>
+			<h2 style="margin-top: 40px">Crowd sourced health service information for LGBTQ* people</h2>
 		</div>
 
 		<div class="one-third column">
@@ -93,15 +95,13 @@
 
 					<img src="http://placehold.it/940x300">
 
-					<p>What's a knock-out like you doing in a computer-generated gin joint like this? Now, how the hell do we defeat an enemy that knows us better than we know ourselves? I think you've let your personal feelings cloud your judgement. Not if I weaken first.</p>
+					<p>crowdhealth.io is a project concieved by Camille and Rachel at a NHS Hack Day in November 2013. When looking for health services that met our individual needs we were often unable to find the information we were looking for.</p>
 
-					<ul>
-						<li>Mr. Worf, you do remember how to fire phasers?</li>
-						<li>For an android with no feelings, he sure managed to evoke them in others.</li>
-						<li>I am your worst nightmare!</li>
-						<li>Did you come here for something in particular or just general Riker-bashing?</li>
-						<li>Wait a minute - you've been declared dead. You can't give orders around here.</li>
-					</ul>
+					<p></p>
+
+					<p>We created three personas, <a href="#nicola">Nicola</a>, <a href="#sunil">Sunil</a> and <a href="#caroline">Caroline</a> and attempted to find information that they would look for on nhs.uk. In most cases the information was hard to find and not local. In others it was missing, or presented poorly for the audience.</p>
+
+
 				</div>
 			</div>
 		</div>
@@ -116,16 +116,22 @@
 				</div>
 
 				<div class="eight columns">
-					<h3>Rachel</h3>
-					<p>Aspires to be captain kirk / a pony.</p>
+					<h3>Rachel Graves</h3>
+					<ul>
+						<li><a href="http://github.com/didlix">Github</a></li>
+						<li><a href="http://github.com/didlix">Twitter</a></li>
+					</ul>
 
 					<img src="http://placehold.it/200x200">
 
 				</div>
 
 				<div class="eight columns">
-					<h3>And</h3>
-					<p>Aspires to be captain kirk / a pony.</p>
+					<h3>Camille Baldock</h3>
+					<ul>
+						<li><a href="http://github.com/camilleldn">Github</a></li>
+						<li><a href="http://github.com/camille_ldn">Twitter</a></li>
+					</ul>
 
 					<img src="http://placehold.it/200x200">
 				</div>
