--- a/index.html
+++ b/index.html
@@ -66,47 +66,25 @@
 		<div class="super-container full-width">
 			<div class="container">
 				<div class="sixteen columns">
-					<h1>1 in 100 people</h1>
-				</div>
-				<div class="one-third column">
-					<img src="http://placehold.it/150x150">
-
-					<h3>Nicola</h3>
-					<p>Mr. Worf, you do remember how to fire phasers? For an android with no feelings, he sure managed to evoke them in others. I am your worst nightmare! Did you come here for something in particular or just general Riker-bashing? When has justice ever been as simple as a rule book? Wait a minute - you've been declared dead. You can't give orders around here. Wouldn't that bring about chaos?</p>
-				</div>
-				<div class="one-third column">
-					<img src="http://placehold.it/150x150">
-					<h3>Sunil</h3>
-					<p>Damage report! We have a saboteur aboard. Not if I weaken first. Travel time to the nearest starbase? I'll alert the crew. Wait a minute - you've been declared dead. You can't give orders around here. In all trust, there is the possibility for betrayal. Then maybe you should consider this: if anything happens to them, Starfleet is going to want a full investigation.</p>
-				</div>
-				<div class="one-third column">
-					<img src="http://placehold.it/150x150">
-					<h3>Caroline</h3>
-					<p>Some days you get the bear, and some days the bear gets you. Talk about going nowhere fast. But the probability of making a six is no greater than that of rolling a seven. I'm afraid I still don't understand, sir. Well, that's certainly good to know. We could cause a diplomatic crisis. Take the ship into the Neutral Zone</p>
-				</div>
-			</div>
-		</div>
-		<hr>
-
-		<div class="super-container full-width">
-			<div class="container">
-				<div class="sixteen columns">
 					<h1>The Project</h1>
 
 					<img src="http://placehold.it/940x300">
 
 					<p>crowdhealth.io is a project concieved by Camille and Rachel at a NHS Hack Day in November 2013. When looking for health services that met our individual needs we were often unable to find the information we were looking for.</p>
 
-					<p></p>
+					<p>The project has undergone the following stages:</p>
 
-					<p>We created three personas, <a href="#nicola">Nicola</a>, <a href="#sunil">Sunil</a> and <a href="#caroline">Caroline</a> and attempted to find information that they would look for on nhs.uk. In most cases the information was hard to find and not local. In others it was missing, or presented poorly for the audience.</p>
-
+						<ul>
+							<li>Rapid prototype at NHS Hack Day</li>
+							<li>Information Architecture (in-progress)</li>
+							<li>Brochure Website & Project Name Hack Day</li>
+						</ul>
 
 				</div>
 			</div>
 		</div>
-
 		<hr>
+
 
 		<div class="super-container full-width">
 			<div class="container">
@@ -120,6 +98,7 @@
 					<ul>
 						<li><a href="http://github.com/didlix">Github</a></li>
 						<li><a href="http://github.com/didlix">Twitter</a></li>
+						<li><a href="https://www.gittip.com/didlix/">Gittip</a></li>
 					</ul>
 
 					<img src="http://placehold.it/200x200">
@@ -131,6 +110,7 @@
 					<ul>
 						<li><a href="http://github.com/camilleldn">Github</a></li>
 						<li><a href="http://github.com/camille_ldn">Twitter</a></li>
+						<li><a href="https://www.gittip.com/camilleldn/">Gittip</a></li>
 					</ul>
 
 					<img src="http://placehold.it/200x200">
@@ -162,8 +142,9 @@
 
 					<p>We are looking for funding to work on this project full-time. Allowing us to bring the best information to you as soon as possible.</p>
 
-					<p>Gittip</p>
-					<p>Vote for us on CitySpark!</p>
+					<p>Please consider funding <a href="http://www.gittip.com/camilleldn">Camille</a> and <a href="http://www.gittip.com/camilleldn">Rachel</a> to be able to facilitate this project.</p>
+
+					<p>Vote for us on CitySpark so that we can work on this project full-time for a month.</p>
 
 				</div>
 			</div>
@@ -172,14 +153,6 @@
 
 		<hr>
 
-		<div class="super-container full-width">
-			<div class="container">
-
-				<div class="sixteen columns">
-					<h1>footer</h1>
-				</div>
-			</div>
-		</div>
 
 <!-- End Document
 ================================================== -->
