Make lead image responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="sixteen columns">
 					<h1>The Project</h1>
 
-					<img src="http://placehold.it/940x300">
+					<img src="http://placehold.it/940x300" style="width: 100%">
 
 					<p>crowdhealth.io is a project concieved by Camille and Rachel at a NHS Hack Day in November 2013. When looking for health services that met our individual needs we were often unable to find the information we were looking for.</p>
 
