Get contributors from Github API

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 	<link rel="stylesheet" href="stylesheets/base.css">
 	<link rel="stylesheet" href="stylesheets/skeleton.css">
 	<link rel="stylesheet" href="stylesheets/layout.css">
-
-	<!--[if lt IE 9]>
-		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
+    
+    <!-- Javascript
+  ================================================== -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+	<script src="javascripts/base.js"></script>
 
 	<!-- Favicons
 	================================================== -->
@@ -123,10 +124,8 @@
 		<div class="super-container full-width">
 			<div class="container">
 
-				<div class="sixteen columns">
+				<div class="sixteen columns" id="contributors">
 					<h1>Contributors on Github</h1>
-					<img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64"> <img src="http://placehold.it/64x64">
-
 					<p>Do you want to make a contribution? Come along to our <a href="#">next hack event</a>.
 				</div>
 			</div>
