use gravatars for the people

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<li><a href="https://www.gittip.com/didlix/">Gittip</a></li>
 					</ul>
 
-					<img src="http://placehold.it/200x200">
+					<img src="http://www.gravatar.com/avatar/ea952dde997fc7c912b862af6b8bbf47?s=200">
 
 				</div>
 
@@ -114,7 +114,7 @@
 						<li><a href="https://www.gittip.com/camilleldn/">Gittip</a></li>
 					</ul>
 
-					<img src="http://placehold.it/200x200">
+					<img src="http://www.gravatar.com/avatar/92fce0908fb759d85e1e738aea9445c7?s=200">
 				</div>
 			</div>
 		</div>
