Add hackday link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="stylesheets/base.css">
 	<link rel="stylesheet" href="stylesheets/skeleton.css">
 	<link rel="stylesheet" href="stylesheets/layout.css">
-    
+
     <!-- Javascript
   ================================================== -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
@@ -125,8 +125,8 @@
 			<div class="container">
 
 				<div class="sixteen columns" id="contributors">
-					<h1>Contributors on Github</h1>
-					<p>Do you want to make a contribution? Come along to our <a href="#">next hack event</a>.
+					<h1>Contributors</h1>
+					<p>Do you want to make a contribution? Come along to our <a href="http://lanyrd.com/2013/crowdhealthhd/">next hack event</a> or <a href="https://github.com/crowdhealthio">submit a pull request</a>.
 				</div>
 			</div>
 		</div>
