Fix twitter links for camille and rachel

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<h3>Rachel Graves</h3>
 					<ul>
 						<li><i class="fa fa-github"></i> <a href="http://github.com/didlix">Github</a></li>
-						<li><i class="fa fa-twitter"></i> <a href="http://github.com/didlix">Twitter</a></li>
+						<li><i class="fa fa-twitter"></i> <a href="http://twitter.com/didlix">Twitter</a></li>
 						<li><i class="fa fa-gittip"></i> <a href="https://www.gittip.com/didlix/">Gittip</a></li>
 					</ul>
 
@@ -101,7 +101,7 @@
 					<h3>Camille Baldock</h3>
 					<ul>
 						<li><i class="fa fa-github"></i> <a href="http://github.com/camilleldn">Github</a></li>
-						<li><i class="fa fa-twitter"></i> <a href="http://github.com/camille_ldn">Twitter</a></li>
+						<li><i class="fa fa-twitter"></i> <a href="http://twitter.com/camille_ldn">Twitter</a></li>
 						<li><i class="fa fa-gittip"></i> <a href="https://www.gittip.com/camilleldn/">Gittip</a></li>
 					</ul>
 
