Fix gittip link for Rachel

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 					<p>We are looking for funding to work on this project full-time. Allowing us to bring the best information to you as soon as possible.</p>
 
-					<p>Please consider funding <a href="http://www.gittip.com/camilleldn">Camille</a> and <a href="http://www.gittip.com/camilleldn">Rachel</a> to be able to facilitate this project.</p>
+					<p>Please consider funding <a href="http://www.gittip.com/camilleldn">Camille</a> and <a href="http://www.gittip.com/didlix">Rachel</a> to be able to facilitate this project.</p>
 
 					<p>Vote for us on CitySpark so that we can work on this project full-time for a month.</p>
 
